--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List App</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
-    <title>Todo List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1> Rishikesh's Todo List</h1>
-    </header>
-    <form>
-        <input type="text" class="todo-input" />
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
-    </form>
-    <div class="todo-container">
-        <ul class="'todo-list"></ul>
+    
+    <div class="container">
+        <h1 >Rishikesh's App</h1>
+        <div class="todo-app">
+            <h2>TO-DO LIST <img src="icon.png"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button onclick="addTask()">
+                    <i class="fas fa-plus-square"></i>
+                </button>
+            </div>
+            <ul id="list-container">
+            </ul>
+        </div>
     </div>
-    <script src="./app.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
